--- a/css/styles.css
+++ b/css/styles.css
@@ -592,7 +592,7 @@ h1.progect-title {
 
 .progects > .item:hover .project-thumb::before,
 .progects > .item:focus .project-thumb::before {
-transform: translateX(0);
+  transform: translateX(0);
 }
 
 .progect {
@@ -787,4 +787,56 @@ p.progect-name {
 .social-link-footer:hover,
 .social-link-footer:focus {
   background-color: var(--accent-color);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  transition: opacity 250ms linear;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  min-height: 581px;
+  width: 528px;
+  background-color: var(--primary-bgc-color);
+}
+
+.modal-btn {
+  position: absolute;
+
+  top: 8px;
+  right: 21px;
+  padding: 0;
+
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  cursor: pointer;
+
+  background-color: var(--primary-bgc-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.modal-btn svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
